# floorplan-generator-stage

./: .gitignore  .gitmodules  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
example/example_usage/: package.xml  setup.cfg  setup.py
example/example_usage/config/: config.toml  robot_config.yaml
example/example_usage/launch/: example.launch.py
example/example_usage/world/: pioneer2dx_with_laser_template.world
floorplan_generator_stage/: ground_truth_map_publisher.py  initial_pose_publisher.py
launch/: floorplan_generator_stage.launch.py
world/: base.world
