<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>floorplan_generator_stage</name>
  <version>0.0.0</version>
  <description>Procedural floorplan generation and Stage simulation launcher. Generates office-style environments from TOML configurations and launches them in Stage.</description>
  <maintainer email="npragin@gmail.com">npragin</maintainer>
  <license>GNU General Public License v3.0</license>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-shapely</exec_depend>
  <exec_depend>python3-pil</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
